--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
-
 <!DOCTYPE html>
 <html lang="sr">
 <head>
-    <meta charset="UTF-8">
-    <title>Treći Red</title>
+  <meta charset="UTF-8">
+  <title>Treći Red</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 50px;
+      background: #f4f4f4;
+    }
+    nav {
+      background: #333;
+      padding: 10px;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .content {
+      background: white;
+      padding: 30px;
+      margin-top: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
-<body style="font-family:sans-serif;text-align:center;padding:50px">
+<body>
+  <nav>
+    <a href="index.html">Početna</a>
+    <a href="o-nama.html">O nama</a>
+    <a href="kontakt.html">Kontakt</a>
+  </nav>
+
+  <div class="content">
     <h1>Dobrodošao u Treći Red</h1>
-    <p>Sajt uspešno postavljen!</p>
+    <p>Ovo je tvoja početna stranica. Slobodno je proširi idejama, sadržajem, tekstovima i vizijom!</p>
+  </div>
 </body>
 </html>
